--- a/index-graphic-design.html
+++ b/index-graphic-design.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Graphics Design :: Arden - A Modern Multipurpose Bootstrap4 Template</title>
+    <title>Sarah Rios</title>
 
     <!--== Favicon ==-->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
@@ -89,23 +89,21 @@
                     <div class="header-logo-area">
                         <a target="blank" href="https://github.com/sdrios">
                             Sarah Rios
-
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-8 d-none d-lg-block">
                     <div class="header-navigation-area">
                         <ul class="main-menu nav justify-content-center">
-                            <li class="full-width active"><a href="index.html">Home</a>
-
+                           
                             </li>
-                            <li class=""><a href="index.html">About</a>
+                            <li class="full-width active"><a href="index.html">About</a>
 
                             </li>
                             <li class="full-width"><a href="index.html">Projects</a>
 
                             </li>
-                            <li class=""><a href="blog.html">Skills</a>
+                            <li class=""><a href="index.html">Skills</a>
 
                             </li>
                             <li class=""><a href="index.html">Resume</a>
@@ -145,7 +143,8 @@
                     <div class="col-lg-5 order-1 order-lg-0">
                         <div class="about-content">
                             <div class="about-txt">
-                                <h2>Motivated by the desire to <span>achieve.</span></h2>
+                                <h2 class="mb-2">Sarah Rios <br>
+                                <h3><span>Full Stack Developer</span></h3></h2>
                                 <p>Success is no accident. It is hard work, perseverance, learning, studying, sacrifice
                                     and most
                                     of all, love of what you are doing or learning to do.</p>
@@ -154,8 +153,8 @@
                     </div>
 
                     <div class="col-lg-6 ml-auto order-0 order-lg-1">
-                        <figure class="about-thumb about-thumb-right-align">
-                            <img src="assets/img/about/graphic-design.jpg" alt="Arden-About" />
+                        <figure class="img-fluid about-thumb about-thumb-right-align">
+                            <img src="https://lh3.googleusercontent.com/BPIdh7Kiw3XbiVgVQOjg71RxG-4uPks_tIXB6fApkAPgseDJLAxr0yp-Cj3mVjYtmLFMUf5SKkm_nH54IMSdwZ776XQ3A_TEmDnWPzKx-h2PFG7ZtOGqoPjKGUixWXWFveGBZ_jMGshSPqYYwCNqB-D0Z91yh5CCodY0d26ycW2R66Y51oyuqLAjUFJv8idxC6lNxMvMuoSOwj3lB30WStchveWGpm3OnCb_serAA1-49ef34omV7tlx1Dow4Qr24w6qRTa1e6HCD25OHgKPaLusu0Lg_muyEm7EIic7lmELwJIef4gezO1wYTG4lpIx2oRBsjTKpYbOLh8P7Qw6brMfB94Kdi2GJtWaftRrThvuIzyyYsyCdniFYzJr5wY6gapxyLnellXiBuruDzoBlSBObRnNU_G3a7eN4LqWIm3thL0T_bqp8drJHi7Wr6ua_sZXoygVl9VWgUXBqHC7Sg8oJmSub3MTiy2oNVWmj8j2GTEFo5_jyz7Zt2hAFdcdwm7l1Yast1zFva775ICNRJP4KqxDTXkPEZYc0_5W0AzzAD1xYoQ9jF6iOqru8tfZCIUroLdX2G0-RdaGeak22j_Pkzcm3eGpOJZ6pLin6jOasKsoIBJn5ZzgVtJRiX0sIOWuXTUbQiSTgi3bZbGnM_p5zV4Mr1DWjKdGQpRIs99WxlJzyzR1=w281-h386-no" alt="about" />
                         </figure>
                     </div>
                 </div>
