--- a/index-graphic-design.html
+++ b/index-graphic-design.html
@@ -134,11 +134,11 @@
     <!--== End Header Wrapper ==-->
 
 
-    <main class="site-wrapper site-wrapper-reveal">
+    <main class="site-wrapper site-wrapper-reveal" style="background: url('https://lh3.googleusercontent.com/xN6AyzHwK8wkCr0xURg9IwDRs8W4NrofDYY2J6I41Efr-FQIrTxwTQhV4TtwbjABJNMDynVzb1xdwB8WkllRgDynz3kyz953DoFYImeqsqljLvKjPVZC-67R7vCJFqfYREZgQfvTYRFrBxsNrEkgxekGCSLyidOzdk3UGzBtfmP2HUrXp41e2lZ3DxM1TADJKjFTQnx4lJcRlcKKC2gSXyVCjg16p8-CISZCPry0beJQsmBJmAd02fPe2MZjCVek5E036z893SiU6wVwtIFLXsiLHab243ukGVOH8PSRk6ODseY-G_tVDncB8clCzRsdOlXfuop6gMKb5rs0rquxaInPD17K2uqh7l1ColL372japsVWn3OEtHd9ycDfFr2eP-NasCMHWUkd9VI6Js27yIerehTqnkjNW-CMTcHFGIejKf6NvvUlOgmgagNTvEjdVO5YO2uDizX-FYBZp52S-I_dWbfxXGYzz7D4kXPxWrDx-3UZ2M7UlwiXm6GLMw8CKgEWgASczoqYvL67b5BM9w2ukuL0DfM48hwn9YSXTAo0f5UFbXjXIqvpYlqCFvmqZ1Vw5EWAKe7IIU6PAa_4PZZNO7ViNaiGnZ1LumJj489evGgrvJSIpdqrOTniDWlsFVhuCGqMu-pV4orlcPAcKlklsCFHjjEIF-EPivKyLVSFh1OHw7b5=w1163-h1805-no') fixed; background-size:cover; ">
 
         <!--== Start About Area ==-->
         <section class="about about-graphic sp-top">
-            <div class="container">
+            <div class="jumbotron container">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-5 order-1 order-lg-0">
                         <div class="about-content">
@@ -278,8 +278,9 @@
         <!--== End Portfolio Area ==-->
 
         <!--== Start Service Area ==-->
-        <div class="service-area-gd sm-top" data-bg="assets/img/icons/letter_a.png">
-            <div class="container">
+        <div class="service-area-gd sm-top" >
+      
+            <div class="container jumbotron">
                 <div class="row">
                     <div class="col-lg-8 ml-auto">
                         <div class="service-area-inner">
