--- a/index-graphic-design.html
+++ b/index-graphic-design.html
@@ -79,8 +79,6 @@
     </div>
     <!--== End Preloader Content ==-->
 
-
-
     <!--== Start Header Wrapper ==-->
     <header class="header-area border-bottom  sticky-header">
         <div class="container-fluid">
@@ -115,7 +113,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-7 col-lg-2">
+                <!-- <div class="col-7 col-lg-2">
                     <div class="header-action-area text-right">
                         <a href="cart.html" class="btn-cart"><span class="icon-ecommerce-bag"></span> <sup
                                 class="shop-count">0</sup>
@@ -127,7 +125,7 @@
                             <span></span>
                         </button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
@@ -354,8 +352,8 @@
                 <div class="col-md-6">
                     <nav class="footer-menu-wrap">
                         <ul class="footer-menu nav justify-content-center justify-content-md-start">
-                            <li><a href="blog.html">Our Blog</a></li>
-                            <li><a href="portfolio.html">Latest Projects</a></li>
+                            <li><a href="blog.html">Find Me on LinkedIn </a></li>
+                            <li><a href="portfolio.html">Find Me</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </nav>
@@ -373,176 +371,6 @@
 
     <!-- Scroll Top Button -->
     <button class="btn-scroll-top"><i class="fa fa-angle-up"></i></button>
-
-
-    <!-- Start Off Canvas Menu Wrapper -->
-    <aside class="off-canvas-wrapper">
-        <div class="off-canvas-inner">
-            <!-- Start Off Canvas Content Wrapper -->
-            <div class="off-canvas-content">
-                <!-- Off Canvas Header -->
-                <div class="off-canvas-header">
-                    <div class="logo-area">
-                        <a href="index.html"><img src="assets/img/logo.png" alt="Logo" /></a>
-                    </div>
-                    <div class="close-action">
-                        <button class="btn-close"><i class="pe-7s-close"></i></button>
-                    </div>
-                </div>
-
-                <div class="off-canvas-item">
-                    <!-- Start Mobile Menu Wrapper -->
-                    <div class="res-mobile-menu">
-                        <!-- Note Content Auto Generate By Jquery From Main Menu -->
-                    </div>
-                    <!-- End Mobile Menu Wrapper -->
-                </div>
-            </div>
-            <!-- End Off Canvas Content Wrapper -->
-        </div>
-    </aside>
-    <!-- End Off Canvas Menu Wrapper -->
-
-
-
-
-    <!-- Start Search Box Area Wrapper -->
-    <div class="search-box-wrapper">
-        <div class="search-box-content-inner">
-            <div class="search-box-form-wrap">
-                <form action="#" method="post">
-                    <div class="search-form position-relative">
-                        <label for="search-input" class="sr-only">Search</label>
-                        <input type="search" id="search-input" required />
-                        <input type="submit" value="search" class="sr-only" />
-                    </div>
-                </form>
-                <div class="search-note">
-                    <p>Hit enter to search or ESC to close</p>
-                </div>
-            </div>
-        </div>
-
-        <button class="search-close"><i class="pe-7s-close"></i></button>
-    </div>
-    <!-- End Search Box Area Wrapper -->
-
-    <!--=== Start Quick View Content Wrapper ==-->
-    <div class="modal fade" id="quick-view">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="quick-view-content-wrap">
-                        <div class="row">
-                            <!-- Start Product Thumbnail Area -->
-                            <div class="col-md-6">
-                                <div class="product-thumb-area mb-0">
-                                    <div class="ht-slick-slider dots-style-three prod-thumb-inner"
-                                        data-slick='{"slidesToShow": 1, "infinite": false, "dots": true}'>
-                                        <figure class="port-details-thumb-item">
-                                            <img src="assets/img/products/quick-view-thumb.jpg" alt="product" />
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Product Thumbnail Area -->
-
-                            <!-- Start Product Info Area -->
-                            <div class="col-md-6">
-                                <div class="product-details-info-content-wrap">
-                                    <div class="prod-details-info-content">
-                                        <h2 class="h4">Sierra Caldera DeWalt</h2>
-                                        <div class="price-group">
-                                            <del class="old-price">$99.00</del>
-                                            <span class="price">$69.99</span>
-                                        </div>
-
-                                        <div class="product-config mt-30">
-                                            <!-- Start Color Choose Option -->
-                                            <div class="config-item">
-                                                <h5 class="config-name">Color: <b>Black</b></h5>
-                                                <ul class="config-list nav">
-                                                    <li class="active ht-tooltip" data-tippy-content="Black"><img
-                                                            src="assets/img/color/black.jpg" alt="Black"></li>
-                                                    <li class="ht-tooltip" data-tippy-content="Yellow"><img
-                                                            src="assets/img/color/yellow.jpg" alt="Yellow"></li>
-                                                </ul>
-                                            </div>
-                                            <!-- End Color Choose Option -->
-
-                                            <!-- Start Size Select Option -->
-                                            <div class="config-item">
-                                                <h5 class="config-name">Size: <b>Large</b></h5>
-                                                <ul class="config-list nav">
-                                                    <li class="ht-tooltip" data-tippy-content="Small"><span>S</span>
-                                                    </li>
-                                                    <li class="ht-tooltip" data-tippy-content="Medium"><span>M</span>
-                                                    </li>
-                                                    <li class="active ht-tooltip" data-tippy-content="Large">
-                                                        <span>L</span></li>
-                                                    <li class="ht-tooltip" data-tippy-content="Extra Large">
-                                                        <span>XL</span></li>
-                                                </ul>
-                                            </div>
-                                            <!-- End Size Select Option -->
-                                        </div>
-
-                                        <div class="quick-product-action mt-30">
-                                            <div class="action-top">
-                                                <div class="pro-qty mr-4">
-                                                    <input type="text" id="quantity" title="Quantity" value="1" />
-                                                </div>
-                                                <button class="btn btn-bordered">Add to Cart</button>
-                                            </div>
-                                        </div>
-
-                                        <div class="prod-details-footer mt-30">
-                                            <div class="prod-details-footer__item">
-                                                <div class="footer-item-left">
-                                                    <h5 class="item-head"><i class="fa fa-tags"></i> Categories:</h5>
-                                                </div>
-                                                <div class="footer-item-right">
-                                                    <ul class="cate-list nav">
-                                                        <li><a href="#">Design</a></li>
-                                                        <li><a href="#">Interior</a></li>
-                                                        <li><a href="#">Multi</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-
-                                            <div class="prod-details-footer__item">
-                                                <div class="footer-item-left">
-                                                    <h5 class="item-head"><i class="fa fa-share-alt"></i> Share:</h5>
-                                                </div>
-
-                                                <div class="footer-item-right">
-                                                    <div class="share-item">
-                                                        <a href="#" class="ht-tooltip"
-                                                            data-tippy-content="Share On Facebook"><i
-                                                                class="fa fa-facebook"></i></a>
-                                                        <a href="#" class="ht-tooltip"
-                                                            data-tippy-content="Share On Twitter"><i
-                                                                class="fa fa-twitter"></i></a>
-                                                        <a href="#" class="ht-tooltip"
-                                                            data-tippy-content="Share On Google Plus"><i
-                                                                class="fa fa-google-plus"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Product Info Area -->
-                        </div>
-                    </div>
-                </div>
-
-                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-            </div>
-        </div>
-    </div>
-    <!--=== End Quick View Content Wrapper ==-->
 
     <!--=======================Javascript============================-->
     <!-- build:js assets/js/app.min.js -->
